lib_LTLIBRARIES = libxlsx.la

libxlsx_la_SOURCES = ../libxlsx.h\
										 alignment.h alignment.c\
										 border.h border.c\
										 cell.h cell.c\
										 cell_value.h cell_value.c\
										 color.h color.c\
										 ezxml.h ezxml.c\
										 font.h font.c\
										 row.h row.c\
										 helpers.h log.h safe_malloc.h str.h zip_entry_read.h\
										 workbook.c\
										 worksheet.c

libxlsx_la_LIBADD = -lzip
